--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
       "php": ">=5.4.0",
-      "anahkiasenplus/html-object": "4.1-dev",
+      "anahkiasenplus/html-object": "dev-master",
       "illuminate/config": "~5.0",
       "illuminate/container": "~5.0",
       "illuminate/http": "~5.0",
